# Platonic-Solids

./: .gitignore  CMakeLists.txt  Makefile  README.md  description.txt
include/: Animal.h  Camera.h  EventHandler.h  EventHandler.hpp  Point.h  Point.hpp  Quaternion.h  Quaternion.hpp  Renderer.h  Renderer.hpp  SDL_helper.hpp  Shape3D.h  Shape3D.hpp  Transformer.h  Transformer.hpp  polyhedron.hpp  rotation_kind.hpp  vector2.hpp  vector3.hpp
include/SDL2/: SDL_config_windows.h
output/: main
source/: main.cpp
src/: Animal.cpp  Camera.cpp  EventHandler.cpp  Point.cpp  Quaternion.cpp  Renderer.cpp  Shape3D.cpp  Transformer.cpp  main.cpp
